make little fixes throughout with emma

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
 <html>
+<!DOCTYPE html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael Chekhov Acting Studio</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
@@ -15,73 +16,75 @@
     	</a>
       <nav class='menu'>
         <a href='contact.html'>Contact</a>
-        <a href='studio.html'>Studio</a>
         <a href='philosophy.html'>Philosophy</a>
         <a href='programs.html'>Programs</a>
+        <a href='studio.html'>Studio</a>
       </nav>
     </header>
 
     <div id="primary" class="content-area">
-      <div class='page-body page-body-narrow'>
+      <div class='page-body'>
         <h2 class='page-title'>INQUIRE</h2>
+        <div class='contact-grid'>
+          <div class='contact-grid-item'>
 
-        <section class='contact-section'>
-          <span>Art of the Actor Training /
-            <a href=''>APPLY TODAY</a> /
-          </span>
-          <span>Workshops /
-            <a href=''>REGISTER</a> /
-          </span>
-        </section>
+            <section class='contact-section'>
+              <span><strong>Questions:</strong>
+                <a href='mailto:info@michaelchekhovactingstudio.com'>
+                  info@michaelchekhovactingstudio.com
+                </a>
+              </span>
+            </section>
 
-        <section class='contact-section'>
-          <span><b>Questions:</b>
-            <a href=''>info@michaelchekhovactingstudio.com</a>
-          </span>
-        </section>
+            <section class='contact-section'>
+              <span>Emma Wade, Studio Manager</span>
+              <span>
+                <a href='mailto:emma@michaelchekhovactingstudio.com'>
+                  emma@michaelchekhovactingstudio.com
+                </a>
+              </span>
+            </section>
 
-        <section class='contact-section'>
-          <span>Emma Wade, Studio Manager</span>
-          <span>
-            <a href='mailto:emma@michaelchekhovactingstudio.com'>
-              emma@michaelchekhovactingstudio.com
-            </a>
-          </span>
-        </section>
+            <section class='contact-section'>
+              <span>Lenard Petit, Artistic Director</span>
+              <span>
+                <a href='mailto:lenard@michaelchekhovactingstudio.com'>
+                  lenard@michaelchekhovactingstudio.com
+                </a>
+              </span>
+              <span>Phone: 646 385 2876</span>
+            </section>
 
-        <section class='contact-section'>
-          <span>Lenard Petit, Artistic Director</span>
-          <span>
-            <a href='mailto:lenard@michaelchekhovactingstudio.com'>
-              lenard@michaelchekhovactingstudio.com
-            </a>
-          </span>
-          <span>Phone: 646 385 2876</span>
-        </section>
+            <section class='contact-section'>
+              <span>
+                <a href=''>SUBSCRIBE</a> to our email list
+              </span>
+              <span>
+                <a href=''>FOLLOW</a> us on social media
+              </span>
+            </section>
 
-        <section class='contact-section'>
-          <span>
-            <a href=''>SUBSCRIBE</a> to our email list
-          </span>
-          <span>
-            <a href=''>FOLLOW</a> us on social media
-          </span>
-        </section>
-
-        <section class='contact-section'>
-          <span><b>The Michael Chekhov Acting Studio</b></span>
-          <span>138 W 15th St, 1st floor</span>
-          <span>New York, New York 10011</span>
-        </section>
+            <section class='contact-section'>
+              <span><strong>The Michael Chekhov Acting Studio</strong></span>
+              <span>138 W 15th St, 1st floor</span>
+              <span>New York, New York 10011</span>
+            </section>
+          </div>
+          <div class='contact-grid-item'>
+            <img class='contact-diagram' src='assets/diagram.png'/>
+          </div>
+        </div>
       </div>
     </div>
     <footer>
       <section>
         <span>
-          <a href=''>138 W 15th St, 1st floor New York, New York 10011</a>
+          <a href='https://www.google.com/maps/place/michael+chekhov+acting+studio/@40.7407823,-74.002077,14.61z/data=!4m5!3m4!1s0x89c259bd98ae6e09:0x77ac45e05794e54c!8m2!3d40.7386774!4d-73.9980879'>138 W 15th St, 1st floor New York, New York 10011</a>
         </span>
         <span>
-          <a href=''>Subscribe</a> to our email newsletter
+          <a href='http://michaelchekhovactingstudio.us10.list-manage1.com/subscribe?u=f86b311144f65c098b5d1ac47&id=f782f7b7a4'>
+            Subscribe
+          </a>to our email newsletter
         </span>
       </section>
       <section>
@@ -91,7 +94,7 @@
         <a href='https://www.facebook.com/chekhovstudionyc/' target='_blank'>
           <img src="assets/facebook.png" />
         </a>
-        <a href='https://http://www.instagram.com/chekhovstudionyc/' target='_blank'>
+        <a href='https://www.instagram.com/chekhovstudionyc/' target='_blank'>
           <img src="assets/instagram.png" />
         </a>
         <a href='https://twitter.com/chekhovstudioNY' target='_blank'>
