--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael Chekhov Acting Studio</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
@@ -15,9 +16,9 @@
     	</a>
       <nav class='menu'>
         <a href='contact.html'>Contact</a>
-        <a href='studio.html'>Studio</a>
         <a href='philosophy.html'>Philosophy</a>
         <a href='programs.html'>Programs</a>
+        <a href='studio.html'>Studio</a>
       </nav>
     </header>
 
@@ -41,10 +42,12 @@
     <footer>
       <section>
         <span>
-          <a href=''>138 W 15th St, 1st floor New York, New York 10011</a>
+          <a href='https://www.google.com/maps/place/michael+chekhov+acting+studio/@40.7407823,-74.002077,14.61z/data=!4m5!3m4!1s0x89c259bd98ae6e09:0x77ac45e05794e54c!8m2!3d40.7386774!4d-73.9980879'>138 W 15th St, 1st floor New York, New York 10011</a>
         </span>
         <span>
-          <a href=''>Subscribe</a> to our email newsletter
+          <a href='http://michaelchekhovactingstudio.us10.list-manage1.com/subscribe?u=f86b311144f65c098b5d1ac47&id=f782f7b7a4'>
+            Subscribe
+          </a>to our email newsletter
         </span>
       </section>
       <section>
@@ -54,7 +57,7 @@
         <a href='https://www.facebook.com/chekhovstudionyc/' target='_blank'>
           <img src="assets/facebook.png" />
         </a>
-        <a href='https://http://www.instagram.com/chekhovstudionyc/' target='_blank'>
+        <a href='https://www.instagram.com/chekhovstudionyc/' target='_blank'>
           <img src="assets/instagram.png" />
         </a>
         <a href='https://twitter.com/chekhovstudioNY' target='_blank'>
