--- a/philosophy.html
+++ b/philosophy.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael Chekhov Acting Studio</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
@@ -15,14 +16,14 @@
     	</a>
       <nav class='menu'>
         <a href='contact.html'>Contact</a>
-        <a href='studio.html'>Studio</a>
         <a href='philosophy.html'>Philosophy</a>
         <a href='programs.html'>Programs</a>
+        <a href='studio.html'>Studio</a>
       </nav>
     </header>
 
     <div id="primary" class="content-area">
-      <div class='page-body page-body-narrow'>
+      <div class='page-body'>
         <h2 class='page-title'>PHILOSOPHY</h2>
 
         <section class='page-section page-section-gray'>
@@ -55,23 +56,25 @@
             with the character, and will not allow the smaller personality
             to invade the character thereby distorting this character into
             one more representation of the actor's personality. The actor's
-            work continually becomes an artistic creation. In Chekhov's own words:
+            work continually becomes an artistic creation.
           </p>
         </section>
 
         <section class='page-section'>
           <p class='phil-quote'>
-            "All you experience in the course of your life, all you observe
-            and think, all that makes you happy or unhappy, all your regrets
-            or satisfactions, all your love or hate, all you long for or avoid,
-            all your achievements and failures, all you brought with you into
-            this life at birth -your temperament, abilities, inclinations etc.,
-            all are part of the region of your so called subconscious depths.
-            There being forgotten by you, or never known to you they undergo
-            the process of being purified of all egotism. They become feelings
-            per se. Thus purged and transformed, they become part of the material
-            from which your Individuality creates the psychology, the illusory
-            "soul" of the character."
+            <em>
+              "All you experience in the course of your life, all you observe
+              and think, all that makes you happy or unhappy, all your regrets
+              or satisfactions, all your love or hate, all you long for or avoid,
+              all your achievements and failures, all you brought with you into
+              this life at birth -your temperament, abilities, inclinations etc.,
+              all are part of the region of your so called subconscious depths.
+              There being forgotten by you, or never known to you they undergo
+              the process of being purified of all egotism. They become feelings
+              per se. Thus purged and transformed, they become part of the material
+              from which your Individuality creates the psychology, the illusory
+              "soul" of the character."
+            </em>
           </p>
           <p class='phil-quote-source'>
             (To The Actor by Michael Chekhov)
@@ -213,15 +216,28 @@
           </p>
         </section>
 
-        <section class='page-section phil-grid phil-book-grid'>
-          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
-          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
-          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
-          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
-          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
-          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
-          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
-          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
+        <section class='page-section'>
+          <h3 class='section-header'>SUGGESTED READING</h3>
+          <p>
+            These books are carried by and can be ordered through our neighbors
+            at the
+            <a href='https://www.google.com/maps/place/Rudolf+Steiner+Bookstore/@40.7386394,-74.0007572,16.09z/data=!4m5!3m4!1s0x89c259bd991dff93:0x13d411c212d67e74!8m2!3d40.7386751!4d-73.9980881'>
+              Rudolf Steiner Bookstore
+            </a>
+            or at NYC’s
+            <a href='http://www.dramabookshop.com/'>legendary Drama Book Shop</a>, make sure to
+            call and see what they have in stock or can order.
+          </p>
+          <ul class='phil-grid'>
+            <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
+            <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
+            <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
+            <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
+            <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
+            <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
+            <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
+            <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
+          </ul>
         </section>
       </div>
     </div>
@@ -229,10 +245,14 @@
     <footer>
       <section>
         <span>
-          <a href=''>138 W 15th St, 1st floor New York, New York 10011</a>
+          <a href='https://www.google.com/maps/place/michael+chekhov+acting+studio/@40.7407823,-74.002077,14.61z/data=!4m5!3m4!1s0x89c259bd98ae6e09:0x77ac45e05794e54c!8m2!3d40.7386774!4d-73.9980879'>
+            138 W 15th St, 1st floor New York, New York 10011
+          </a>
         </span>
         <span>
-          <a href=''>Subscribe</a> to our email newsletter
+          <a href='http://michaelchekhovactingstudio.us10.list-manage1.com/subscribe?u=f86b311144f65c098b5d1ac47&id=f782f7b7a4'>
+            Subscribe
+          </a>to our email newsletter
         </span>
       </section>
       <section>
@@ -242,7 +262,7 @@
         <a href='https://www.facebook.com/chekhovstudionyc/' target='_blank'>
           <img src="assets/facebook.png" />
         </a>
-        <a href='https://http://www.instagram.com/chekhovstudionyc/' target='_blank'>
+        <a href='https://www.instagram.com/chekhovstudionyc/' target='_blank'>
           <img src="assets/instagram.png" />
         </a>
         <a href='https://twitter.com/chekhovstudioNY' target='_blank'>
