reformat studio quotes & add dropdown menu to all pages

--- a/studio.html
+++ b/studio.html
@@ -15,10 +15,18 @@
     		<img class='logo' src='http://res.cloudinary.com/dn07p1frq/image/upload/c_scale,w_100/v1507927305/expansiveman_eqo6gt.png' />
     	</a>
       <nav class='menu'>
-        <a href='contact.html'>Contact</a>
-        <a href='philosophy.html'>Philosophy</a>
-        <a href='programs.html'>Programs</a>
-        <a href='studio.html'>Studio</a>
+        <group class='submenu-link'>
+          <a class='menu-item' href='studio.html'>Studio</a>
+          <nav class='submenu'>
+            <a class='submenu-item' href='studio.html'>Welcome</a>
+            <a class='submenu-item' href=''>Lenard</a>
+            <a class='submenu-item' href=''>Faculty</a>
+            <a class='submenu-item' href=''>Friends</a>
+          </nav>
+        </group>
+        <a class='menu-item' href='programs.html'>Programs</a>
+        <a class='menu-item' href='philosophy.html'>Philosophy</a>
+        <a class='menu-item' href='contact.html'>Contact</a>
       </nav>
     </header>
 
@@ -74,34 +82,63 @@
         <section class='page-section'>
           <h3 class='section-header'>TESTIMONIALS</h3>
           <p>
-            "This work has transformed me as an actor. It allows me to
-            create without boundaries and is incredibly fun. I've never
-            felt a sense of play as I do when using the Chekhov technique."
-            - Sara Nedwick, Actor
+            <em>
+              "This work has transformed me as an actor. It allows me to
+              create without boundaries and is incredibly fun. I've never
+              felt a sense of play as I do when using the Chekhov technique."
+            </em>
+            <div class='studio-quote-source'>
+              - Sara Nedwick, Actor
+            </div>
           </p>
           <p>
-            "It is a fun, playful, non-judgmental environment where actors
-            can learn a physical acting technique that greatly engages their
-            imagination and energizes their body." - Doug Lory, Actor
+            <em>
+              "It is a fun, playful, non-judgmental environment where actors
+              can learn a physical acting technique that greatly engages their
+              imagination and energizes their body."
+            </em>
+          <div class='studio-quote-source'>
+            - Doug Lory, Actor
+          </div>
           </p>
           <p>
-            “The work feels like play, it exercises my focus and teaches
-            me to trust my own instincts. In conjunction with the Alexander
-            technique this work makes me aware of energy and how I can direct
-            it, utilize it and work with it.” -Christiane Seidel, Actor
+            <em>
+              “The work feels like play, it exercises my focus and teaches
+              me to trust my own instincts. In conjunction with the Alexander
+              technique this work makes me aware of energy and how I can direct
+              it, utilize it and work with it.”
+            </em>
+            <div class='studio-quote-source'>
+              - Christiane Seidel, Actor
+            </div>
           </p>
           <p>
-            “Mr. Lenard Petit is the real deal! During class, he is always
-            calm, cool and collected. When he is teaching or sharing you
-            see his passion, his love in the work.” - Michael Semosh, Actor
+            <em>
+              “Mr. Lenard Petit is the real deal! During class, he is always
+              calm, cool and collected. When he is teaching or sharing you
+              see his passion, his love in the work.”
+            </em>
+          <div class='studio-quote-source'>
+            - Michael Semosh, Actor
+          </div>
           </p>
           <p>
-            “I really appreciate the time taken with each student to ask
-            questions, check-in, and process what is occurring for us as we
-            encounter the work.” - Anna Dart, Actor
+            <em>
+              “I really appreciate the time taken with each student to ask
+              questions, check-in, and process what is occurring for us as we
+              encounter the work.”
+            </em>
+          <div class='studio-quote-source'>
+            - Anna Dart, Actor
+          </div>
           </p>
           <p>
-            "My imagination and play is coming back to life!" - Jessica Savage, Actor
+            <em>
+              "My imagination and play is coming back to life!"
+            </em>
+            <div class='studio-quote-source'>
+              - Jessica Savage, Actor
+            </div>
           </p>
         </section>
       </div>
