--- a/programs.html
+++ b/programs.html
@@ -16,10 +16,18 @@
     		<img class='logo' src='http://res.cloudinary.com/dn07p1frq/image/upload/c_scale,w_100/v1507927305/expansiveman_eqo6gt.png' />
     	</a>
       <nav class='menu'>
-        <a href='contact.html'>Contact</a>
-        <a href='philosophy.html'>Philosophy</a>
-        <a href='programs.html'>Programs</a>
-        <a href='studio.html'>Studio</a>
+        <group class='submenu-link'>
+          <a class='menu-item' href='studio.html'>Studio</a>
+          <nav class='submenu'>
+            <a class='submenu-item' href='studio.html'>Welcome</a>
+            <a class='submenu-item' href=''>Lenard</a>
+            <a class='submenu-item' href=''>Faculty</a>
+            <a class='submenu-item' href=''>Friends</a>
+          </nav>
+        </group>
+        <a class='menu-item' href='programs.html'>Programs</a>
+        <a class='menu-item' href='philosophy.html'>Philosophy</a>
+        <a class='menu-item' href='contact.html'>Contact</a>
       </nav>
     </header>
 
