add studio subpages

--- a/lenard.html
+++ b/lenard.html
@@ -1,5 +1,5 @@
-<html>
 <!DOCTYPE html>
+<html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,56 +32,46 @@
 
     <div id="primary" class="content-area">
       <div class='page-body'>
-        <h2 class='page-title'>INQUIRE</h2>
-        <div class='contact-grid'>
-          <div class='contact-grid-item'>
+        <h2 class='page-title'>LENARD PETIT</h2>
 
-            <section class='contact-section'>
-              <span><strong>Questions:</strong>
-                <a href='mailto:info@michaelchekhovactingstudio.com'>
-                  info@michaelchekhovactingstudio.com
-                </a>
-              </span>
-            </section>
+        <section class='page-section'>
+          <h2 class='studio-greeting'>
+            Michael Chekhov envisioned a new theatre with a heart. With
+            his approach actors are able to make heart connections with
+            the audience. It is self expression which is also real
+            communication, human being to human being. This is why I am
+            attracted to this work.
+          </h2>
+          <div class='group lenard-attribution'>-- Lenard Petit</div>
+        </section>
 
-            <section class='contact-section'>
-              <span>Emma Wade, Studio Manager</span>
-              <span>
-                <a href='mailto:emma@michaelchekhovactingstudio.com'>
-                  emma@michaelchekhovactingstudio.com
-                </a>
-              </span>
-            </section>
-
-            <section class='contact-section'>
-              <span>Lenard Petit, Artistic Director</span>
-              <span>
-                <a href='mailto:lenard@michaelchekhovactingstudio.com'>
-                  lenard@michaelchekhovactingstudio.com
-                </a>
-              </span>
-              <span>Phone: 646 385 2876</span>
-            </section>
-
-            <section class='contact-section'>
-              <span>
-                <a href=''>SUBSCRIBE</a> to our email list
-              </span>
-              <span>
-                <a href=''>FOLLOW</a> us on social media
-              </span>
-            </section>
-
-            <section class='contact-section'>
-              <span><strong>The Michael Chekhov Acting Studio</strong></span>
-              <span>138 W 15th St, 1st floor</span>
-              <span>New York, New York 10011</span>
-            </section>
+        <section class='page-section page-section-gray'>
+          <img class='image-float' src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+          <div>
+            Lenard Petit is one of a handful of teacher students trained
+            by the original members of Michael Chekhov’s Theater School.
+            He is a founding member of the Michael Chekhov Association,
+            MICHA, and the Director of the Michael Chekhov Acting Studio
+            in New York City since it’s inception in 1996. Author of the
+            Michael Chekhov Handbook, for the Actor, he has been working
+            in the theater for forty years collaborating with other
+            artists to create original works for the stage, cinema, and
+            television. He has directed plays and performance pieces on
+            and Off Broadway, and in Great Britain. As an actor, he has
+            performed in works by Julie Taymor, Meredith Monk, Richard
+            Foreman, Ping Chong, and many others. In 2016, Mr. Petit was
+            invited to create a Michael Chekhov Workshop and Festival in
+            connection with the Shanghai Theater Academy in Shanghai
+            China. He has been invited to teach Master classes at the
+            International School for Film and Television in Munich,
+            Helsinki University, as well as master classes in, Amsterdam,
+            Rome, Lisbon, Madrid, Berlin, Oslo, Reykjavik, Brussels, Zurich,
+            Dublin, London, Riga, Vilnius, and Irkutsk, Siberia. For
+            twenty-five years he taught the Chekhov Technique in the MFA
+            and BFA Acting programs at Mason Gross School of the Arts at
+            Rutgers University.
           </div>
-          <div class='contact-grid-item'>
-            <img class='contact-diagram' src='assets/diagram.png'/>
-          </div>
-        </div>
+        </section>
       </div>
     </div>
     <footer>
