--- a/friends.html
+++ b/friends.html
@@ -1,5 +1,5 @@
-<html>
 <!DOCTYPE html>
+<html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,56 +32,9 @@
 
     <div id="primary" class="content-area">
       <div class='page-body'>
-        <h2 class='page-title'>INQUIRE</h2>
-        <div class='contact-grid'>
-          <div class='contact-grid-item'>
+        <h2 class='page-title'>FRIENDS</h2>
 
-            <section class='contact-section'>
-              <span><strong>Questions:</strong>
-                <a href='mailto:info@michaelchekhovactingstudio.com'>
-                  info@michaelchekhovactingstudio.com
-                </a>
-              </span>
-            </section>
-
-            <section class='contact-section'>
-              <span>Emma Wade, Studio Manager</span>
-              <span>
-                <a href='mailto:emma@michaelchekhovactingstudio.com'>
-                  emma@michaelchekhovactingstudio.com
-                </a>
-              </span>
-            </section>
-
-            <section class='contact-section'>
-              <span>Lenard Petit, Artistic Director</span>
-              <span>
-                <a href='mailto:lenard@michaelchekhovactingstudio.com'>
-                  lenard@michaelchekhovactingstudio.com
-                </a>
-              </span>
-              <span>Phone: 646 385 2876</span>
-            </section>
-
-            <section class='contact-section'>
-              <span>
-                <a href=''>SUBSCRIBE</a> to our email list
-              </span>
-              <span>
-                <a href=''>FOLLOW</a> us on social media
-              </span>
-            </section>
-
-            <section class='contact-section'>
-              <span><strong>The Michael Chekhov Acting Studio</strong></span>
-              <span>138 W 15th St, 1st floor</span>
-              <span>New York, New York 10011</span>
-            </section>
-          </div>
-          <div class='contact-grid-item'>
-            <img class='contact-diagram' src='assets/diagram.png'/>
-          </div>
-        </div>
+        
       </div>
     </div>
     <footer>
