--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           <a class='menu-item' href='studio.html'>Studio</a>
           <nav class='submenu'>
             <a class='submenu-item' href='studio.html'>Welcome</a>
-            <a class='submenu-item' href=''>Lenard</a>
-            <a class='submenu-item' href=''>Faculty</a>
-            <a class='submenu-item' href=''>Friends</a>
+            <a class='submenu-item' href='lenard.html'>Lenard</a>
+            <a class='submenu-item' href='faculty.html'>Faculty</a>
+            <a class='submenu-item' href='friends.html'>Friends</a>
           </nav>
         </group>
         <a class='menu-item' href='programs.html'>Programs</a>
